corrections et ajouts sur plusieurs pages

--- a/style.css
+++ b/style.css
@@ -258,6 +258,7 @@ width:670px;
 padding:5px 5px 5px 20px;
 color:#FFFFFF;
 font-weight:bold;
+margin-bottom: 7px;
 }
 .small_title{
 background-color:#385870;
